2009-10-29  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_xauth/Makefile.am: Link with libselinux.
	* modules/pam_xauth/pam_xauth.c(pam_sm_open_session): Call
	setfscreatecon() if selinux is enabled to create the .xauth file
	with the right label. Original idea by Dan Walsh.

2009-10-08  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_tty_audit/pam_tty_audit.8.xml: Add notice about aureport
	add SEE ALSO section.

2009-10-06  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_listfile/pam_listfile.c(pam_sm_authenticate): Just
	call pam_modutil_user_in_group_nam_nam() instead of reimplementation
	of group matching.

2009-10-05  Kris Thomsen  <lakristho@gmail.com>

	* po/da.po: Updated translations.

2009-09-29  Piotr Drąg  <piotrdrag@gmail.com>

	* po/pl.po: Updated translations.

2009-09-21  Yulia Poyarkova  <yulia.poyarkova@redhat.com>

	* po/ru.po: Updated translations.

2009-09-17  Kiyoto Hashida  <khashida@redhat.com>

	* po/ja.po: Updated translations.

2009-09-17  Eunju Kim  <eukim@redhat.com>

	* po/ko.po: Updated translations.

2009-09-17  Yulia Poyarkova  <yulia.poyarkova@redhat.com>

	* po/ru.po: Updated translations.

2009-09-10  Steve Langasek  <vorlon@debian.org>

	* modules/pam_securetty/pam_securetty.c: pam_securetty should not
	return PAM_USER_UNKNOWN when the tty is secure, regardless of what
	was entered as a username.
	Patch from Nicolas François <nicolas.francois@centraliens.net>.

2009-08-31  Steve Langasek  <vorlon@debian.org>

	* modules/pam_namespace/namespace.init: make this portable to POSIX
	awk, instead of using GNU awk extensions.

2009-08-25  Steve Langasek  <vorlon@debian.org>

	* modules/pam_sepermit/pam_sepermit.8.xml: fix up one reference
	to pam.d(8) left behind because I've forgotten how CVS works
	* po/es.po: fix missing whitespace in password prompts.

2009-08-24  Steve Langasek  <vorlon@debian.org>

	* doc/pam_get_authtok.3.xml: grammar fix.
	* doc/adg/Linux-PAM-ADG.xml: Likewise.
	* doc/mwg/Linux-PAM_MWG.xml: Likewise.